Fix - issue with some ddb source popouts, prevent wrap of journal note/folder titles, add hover title

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -2839,10 +2839,13 @@ button.roll-button-mod.minus {
 .journal-chapter-title {
     flex: 1;
     padding: 8px;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: bold;
     font-family: Roboto;
     overflow: hidden;
+    max-height: 100%;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
 }
 
 .folderPlaceholder {
